--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -4,6 +4,6 @@ h1,h2,h3,h4,h5,h6{ margin:0; padding:0}
 figure{ padding:0; margin:0; line-height:0;}
 img{ max-width:100%; max-height:100%}
 ul,li{ text-decoration:none; display:inline; margin:0; padding:0;}
-a{ text-decoration:none; transition: all 0.5s;}
-a:hover{ text-decoration:none;}
+a{ text-decoration:underline; transition: all 0.5s; color: #444;}
+a:hover{ text-decoration:none; background-color: rgba(108,117,125,0.2); color: #444;}
 p{ margin:0; padding:0}
