--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,73 @@
+/* .pageWrapper{
+    background-color: #323232;
+} */
 .total-stats{
     background-color: #d4ebd0;
+    font-family: 'Montserrat-Light';
+}
+.total-stats h4{
+    font-family: 'Montserrat-Regular';
 }
 .total-stats .lastUpdate{
     color: black;
     font-size: 15px;
+    font-family: 'Montserrat-Light';
 }
 .total-stats .lastUpdate span{
-    color: blue;
+    color: #6c757d;
+    font-family: 'Montserrat-Regular';
 }
 .total-stats .g-stat-cont{
     border-radius: 4px;
+}
+.total-stats .g-stat-cont h4{
+    color: #ff073a;
+}
+.total-stats .g-stat-cont #dCases{
+    color: #6c757d;
+}
+.total-stats .g-stat-cont #rCases{
+    color: rgba(40,167,69,.8);
 }
 .total-stats .first{
     background-color: #ffeb99; 
 }
 .total-stats .second{
     background-color: #a4c5c6;
+}
+
+.single-state-cont{
+    background-color: #bae5e5;
+}
+.single-state-cont .source-text{
+    border-bottom: 2px solid #6c757d;
+} 
+.single-state-cont .source-text .data-information{
+    font-size: 12px;
+    color: #6c757d;
+    font-family: 'Montserrat-Light';
+    text-align: right;
+}
+.single-state-cont .details .field{
+    background-color: #ECEDEE;    
+    border-radius: 5px;
+}
+.single-state-cont .details h3{
+    font-family: 'Montserrat-Bold';
+    font-size: 15px;
+}
+.single-state-list .single-state{
+    background-color: #1eb2a6;
+    height: 50px;
+    border-radius: 5px;
+    transition: 0.5s all;
+}
+.single-state-list .single-state:hover{
+    cursor: pointer;
+    background-color: #24d1c3;
+}
+.single-state-list h3{
+    font-size: 17px;
+    font-family: 'Montserrat-Regular';
+    color: black;
 }
