--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     background-color: #323232;
 } */
 .total-stats{
-    background-color: #d4ebd0;
+    background-color: #2B4162;
     font-family: 'Montserrat-Light';
 }
 .total-stats h4{
@@ -30,21 +30,21 @@
     color: rgba(40,167,69,.8);
 }
 .total-stats .first{
-    background-color: #ffeb99; 
+    background-color: #E1CDB5; 
 }
 .total-stats .second{
-    background-color: #a4c5c6;
+    background-color: #CDDFA0;
 }
 
 .single-state-cont{
-    background-color: #bae5e5;
+    background-color: #385F71;
 }
 .single-state-cont .source-text{
     border-bottom: 2px solid #6c757d;
 } 
 .single-state-cont .source-text .data-information{
     font-size: 12px;
-    color: #6c757d;
+    color: #F5F0F6;
     font-family: 'Montserrat-Light';
     text-align: right;
 }
